[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hassle"
description = "Create, build, test, and publish Python projects and packages."
version = "2.13.4"
requires-python = ">=3.10, <3.12"
dependencies = ["black", "isort", "pytest~=7.2.1", "coverage", "packagelister", "pdoc", "twine", "auto-changelog", "bs4", "requests", "build", "pathier", "gitbetter"]
readme = "README.md"
keywords = ["devops", "packaging", "build", "test", "automation"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[[project.authors]]
name = "Matt Manes"
email = "mattmanes@pm.me"

[project.urls]
Homepage = "https://github.com/matt-manes/hassle"
Documentation = "https://github.com/matt-manes/hassle/tree/main/docs"
"Source code" = "https://github.com/matt-manes/hassle/tree/main/src/hassle"

[project.scripts]
hassle = "hassle.hassle_cli:main"

[tool]
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [".coverage", ".pytest_cache", ".vscode", "tests", "notes.txt", ".gitignore", "hassle_config.toml"]
